<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:context="com.rogacheski.lbd.lbdmusic.ResetActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/loginTop"
        android:paddingStart="@dimen/loginLeft"
        android:paddingEnd="@dimen/loginRight"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/loginLogo"
            android:layout_marginBottom="@dimen/loginBottom"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/loginImage"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/resetSend"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/resetMessage"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/reset_password_email"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/resetInput" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text="@string/resetBtn"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/resetBack"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</ScrollView>